all non HTML formatters horizontal scrolling was incorrect, now fixed

--- a/htdocs/martview/martview_template.css
+++ b/htdocs/martview/martview_template.css
@@ -602,7 +602,7 @@ div#mart_export_data
 .mart_results
 {
 	font-family: Courier;
-	overflow: auto;
+	overflow: visible;
 }
 
 .mart_table
